<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>



	<!-- Application level -->

	<string name="app_name">Spacebook</string>


	<!-- WelcomeVCActivity -->

	<string name="activity_welcome_vcactivity_spacebook_text_view_text">Spacebook</string>
	<string name="activity_welcome_vcactivity_conquer_the_stars_text_view_text">Conquer the stars\nfrom behind the screen.</string>
	<string name="activity_welcome_vcactivity_log_in_button_text">LOG IN</string>
	<string name="activity_welcome_vcactivity_sign_up_button_text">SIGN UP</string>
	<string name="activity_welcome_vcactivity_supernova_stu_text_view_text">© 2050 Supernova Studio</string>


	<!-- LoginVCActivity -->

	<string name="activity_login_vcactivity_log_in_text_view_text">Log in</string>
	<string name="activity_login_vcactivity_welcome_back_text_view_text">Welcome back.\nThe galaxy awaits you.</string>
	<string name="activity_login_vcactivity_login_button_text">LOG IN</string>
	<string name="activity_login_vcactivity_forgot_your_password_button_text">Forgot your password?</string>
	<string name="activity_login_vcactivity_your_nickname_edit_text_text">Your nickname</string>
	<string name="activity_login_vcactivity_your_password_edit_text_text">Your password</string>


	<!-- SignupVCActivity -->

	<string name="activity_signup_vcactivity_sign_up_text_view_text">Sign up</string>
	<string name="activity_signup_vcactivity_it_sfree_text_view_text">It’s free and always will be.\nBecause advertisement.</string>
	<string name="activity_signup_vcactivity_sign_up_button_text">SIGN UP</string>
	<string name="activity_signup_vcactivity_your_nickname_edit_text_text">Your nickname</string>
	<string name="activity_signup_vcactivity_your_spacemail_edit_text_text">Your spacemail</string>
	<string name="activity_signup_vcactivity_password_edit_text_text">Password (40+ characters)</string>
	<string name="activity_signup_vcactivity_already_gave_up_your_text_view_text">Already gave up your soul? </string>
	<string name="activity_signup_vcactivity_log_in_button_text">Log In!</string>
	<string name="activity_signup_vcactivity_i_agree_with_interga_text_view_text">I agree with intergalatic terms and conditions</string>


	<!-- TimelineVCActivity -->

	<string name="activity_q_nerp_mxrfo_cell_melon_husk_launches_text_view_text">Melon Husk launches the first car that can\ntravel a galaxy on a single tank of gas.</string>
	<string name="activity_q_nerp_mxrfo_cell_spacewoman185k_li_text_view_text">Spacewoman &amp;amp; 185k like this</string>
	<string name="activity_q_nerp_mxrfo_cell_k_comments_text_view_text">21k comments</string>
	<string name="activity_q_nerp_mxrfo_cell_spacecrunch_text_view_text">SpaceCrunch</string>
	<string name="activity_q_nerp_mxrfo_cell_today145_pm_text_view_text">Today, 1:45 PM</string>
	<string name="activity_pk_xt_lwsf_rq_cell_pluto_posted_anew_ltext_view_text">Pluto posted a new life event</string>
	<string name="activity_pk_xt_lwsf_rq_cell_in_acomplicated_rel_text_view_text">In a complicated relationship</string>
	<string name="activity_zu_su_vba_mll_cell_john_joe_and_jack_text_view_text">John, Joe and Jack &amp;amp; 18k are coming</string>
	<string name="activity_zu_su_vba_mll_cell_text_view_text_view_text">3/13/2050</string>
	<string name="activity_zu_su_vba_mll_cell_guess_who_sback_text_view_text">Guess who’s back?</string>
	<string name="activity_zu_su_vba_mll_cell_laika_created_anew_text_view_text">Laika created a new event near you</string>
	<string name="activity_zu_su_vba_mll_cell_back_from_the_space_text_view_text">Back from the space trip! Come everyone.</string>
	<string name="activity_zp_igtd_wl_ok_cell_hull_tattoos_anew_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="activity_zp_igtd_wl_ok_cell_sponsored_content_text_view_text">Sponsored content</string>
	<string name="activity_zp_igtd_wl_ok_cell_spray_and_pray_text_view_text">Spray and Pray</string>


	<!-- ProfileVCActivity -->

	<string name="activity_profile_vcactivity_item_menu_item_text">Settings</string>
	<string name="activity_profile_vcactivity_phone_booth_andro_text_view_text">1 Phone Booth, Andromeda</string>
	<string name="activity_profile_vcactivity_dr_what_text_view_text">Dr. What</string>
	<string name="activity_profile_vcactivity_traveler_dreamer_text_view_text">Traveler, dreamer, showman. Occasionally gets\ninto fight, not always survives.</string>
	<string name="activity_profile_vcactivity_stalking_text_view_text">Stalking</string>
	<string name="activity_profile_vcactivity_text_view_text_view_text">326</string>
	<string name="activity_profile_vcactivity_stalkers_text_view_text">Stalkers</string>
	<string name="activity_profile_vcactivity_k_text_view_text">58k</string>
	<string name="activity_profile_vcactivity_photos_text_view_text">Photos</string>
	<string name="activity_profile_vcactivity_text_view_two_text_view_text">365</string>
	<string name="activity_profile_vcactivity_latest_photos_text_view_text">LATEST PHOTOS</string>


	<!-- ProfilePhotosVCActivity -->

	<string name="activity_zmxitwg_gpc_cell_today_text_view_text">TODAY</string>


	<!-- ProfileSettingsVCActivity -->

	<string name="activity_profile_settings_vcactivity_details_text_view_text">DETAILS</string>
	<string name="activity_profile_settings_vcactivity_information_text_view_text">INFORMATION</string>
	<string name="activity_profile_settings_vcactivity_text_text_view_text">Dr. Where</string>
	<string name="activity_profile_settings_vcactivity_label_text_view_text">Name</string>
	<string name="activity_profile_settings_vcactivity_text_two_text_view_text">Yes</string>
	<string name="activity_profile_settings_vcactivity_label_two_text_view_text">Occasional advertisement</string>
	<string name="activity_profile_settings_vcactivity_text_three_text_view_text">Log out</string>
	<string name="activity_profile_settings_vcactivity_label_three_text_view_text">Dr. Where</string>
	<string name="activity_profile_settings_vcactivity_label_four_text_view_text">Logged as</string>
	<string name="activity_profile_settings_vcactivity_text_four_text_view_text">tardis~spacemail.io</string>
	<string name="activity_profile_settings_vcactivity_label_five_text_view_text">Spacemail</string>
	<string name="activity_profile_settings_vcactivity_label_six_text_view_text">Randomize timeline information</string>


	<!-- MessagesVCActivity -->

	<string name="activity_wwyreqau_dz_cell_mrs_doya_text_view_text">Mrs. Doya</string>
	<string name="activity_i_nlc_qwax_wq_cell_the_water_so_testy_ytext_view_text">The water so testy your own dad will kill you for it</string>
	<string name="activity_i_nlc_qwax_wq_cell_name_text_view_text">Lukewarm Skywater</string>


	<!-- EventDetailVCActivity -->

	<string name="activity_event_detail_vcactivity_item_two_menu_item_text">Events</string>
	<string name="activity_event_detail_vcactivity_guess_who_sback_text_view_text">Guess who’s back?</string>
	<string name="activity_event_detail_vcactivity_happening_in20h_ba_text_view_text">Happening in 20h, Bajkonur</string>
	<string name="activity_event_detail_vcactivity_event_posted_by_laik_text_view_text">Event posted by Laika</string>
	<string name="activity_event_detail_vcactivity_coming_text_view_text">Coming</string>
</resources>
