<?xml version="1.0" encoding="utf-8" standalone="no"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/activity_profile_vcactivity_profile_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/header_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/activity_profile_vcactivity_header_constraint_layout_margin_top"
		android:background="@color/activity_profile_vcactivity_header_constraint_layout_background_color"
		app:layout_constraintBottom_toTopOf="@+id/info_bar_constraint_layout"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="64dp">

		<ImageView
			android:id="@+id/avatar_temp_image_view"
			android:layout_width="@dimen/activity_profile_vcactivity_avatar_temp_image_view_width"
			android:layout_height="@dimen/activity_profile_vcactivity_avatar_temp_image_view_height"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_avatar_temp_image_view_margin_top"
			android:scaleType="fitXY"
			android:src="@drawable/avatar_temp_2"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="118dp"
			tools:layout_editor_absoluteY="12dp"/>

		<TextView
			android:id="@+id/phone_booth_andro_text_view"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/activity_profile_vcactivity_phone_booth_andro_text_view_height"
			android:alpha="0.400000005960464"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="center"
			android:text="@string/activity_profile_vcactivity_phone_booth_andro_text_view_text"
			android:textColor="@color/activity_profile_vcactivity_phone_booth_andro_text_view_text_color"
			android:textSize="@dimen/activity_profile_vcactivity_phone_booth_andro_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/dr_what_text_view"
			tools:layout_editor_absoluteX="115dp"
			tools:layout_editor_absoluteY="196dp"/>

		<TextView
			android:id="@+id/dr_what_text_view"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/activity_profile_vcactivity_dr_what_text_view_height"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_dr_what_text_view_margin_top"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="center"
			android:text="@string/activity_profile_vcactivity_dr_what_text_view_text"
			android:textColor="@color/activity_profile_vcactivity_dr_what_text_view_text_color"
			android:textSize="@dimen/activity_profile_vcactivity_dr_what_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/avatar_temp_image_view"
			tools:layout_editor_absoluteX="135dp"
			tools:layout_editor_absoluteY="156dp"/>

		<TextView
			android:id="@+id/traveler_dreamer_text_view"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/activity_profile_vcactivity_traveler_dreamer_text_view_margin_bottom"
			android:layout_marginLeft="@dimen/activity_profile_vcactivity_traveler_dreamer_text_view_margin_start"
			android:layout_marginRight="@dimen/activity_profile_vcactivity_traveler_dreamer_text_view_margin_end"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_traveler_dreamer_text_view_margin_top"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="center"
			android:text="@string/activity_profile_vcactivity_traveler_dreamer_text_view_text"
			android:textColor="@color/activity_profile_vcactivity_traveler_dreamer_text_view_text_color"
			android:textSize="@dimen/activity_profile_vcactivity_traveler_dreamer_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/phone_booth_andro_text_view"
			tools:layout_editor_absoluteX="41dp"
			tools:layout_editor_absoluteY="227dp"/>

	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/info_bar_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/activity_profile_vcactivity_info_bar_constraint_layout_height"
		android:background="@color/activity_profile_vcactivity_info_bar_constraint_layout_background_color"
		app:layout_constraintBottom_toTopOf="@+id/gallery_constraint_layout"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="361dp">

		<android.support.constraint.ConstraintLayout
			android:id="@+id/group7_constraint_layout"
			android:layout_width="@dimen/activity_profile_vcactivity_group7_constraint_layout_width"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/activity_profile_vcactivity_group7_constraint_layout_margin_end"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_group7_constraint_layout_margin_top"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="277dp"
			tools:layout_editor_absoluteY="12dp">

			<TextView
				android:id="@+id/stalking_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha="0.400000005960464"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_stalking_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_stalking_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_stalking_text_view_text_size"
				app:layout_constraintTop_toBottomOf="@+id/text_view_text_view"
				tools:layout_editor_absoluteX="7dp"
				tools:layout_editor_absoluteY="36dp"/>

			<TextView
				android:id="@+id/text_view_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_text_view_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_text_view_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_text_view_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="0dp"/>

		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/group6_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_profile_vcactivity_group6_constraint_layout_margin_start"
			android:layout_marginRight="@dimen/activity_profile_vcactivity_group6_constraint_layout_margin_end"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_group6_constraint_layout_margin_top"
			app:layout_constraintLeft_toRightOf="@+id/group5_constraint_layout"
			app:layout_constraintRight_toLeftOf="@+id/group7_constraint_layout"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="159dp"
			tools:layout_editor_absoluteY="12dp">

			<TextView
				android:id="@+id/stalkers_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha="0.400000005960464"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_stalkers_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_stalkers_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_stalkers_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/k_text_view"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="36dp"/>

			<TextView
				android:id="@+id/k_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_k_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_k_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_k_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="0dp"/>

		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/group5_constraint_layout"
			android:layout_width="@dimen/activity_profile_vcactivity_group5_constraint_layout_width"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_profile_vcactivity_group5_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_group5_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="40dp"
			tools:layout_editor_absoluteY="12dp">

			<TextView
				android:id="@+id/photos_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_profile_vcactivity_photos_text_view_margin_top"
				android:alpha="0.400000005960464"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_photos_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_photos_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_photos_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_view_two_text_view"
				tools:layout_editor_absoluteX="10dp"
				tools:layout_editor_absoluteY="39dp"/>

			<TextView
				android:id="@+id/text_view_two_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/activity_profile_vcactivity_text_view_two_text_view_text"
				android:textColor="@color/activity_profile_vcactivity_text_view_two_text_view_text_color"
				android:textSize="@dimen/activity_profile_vcactivity_text_view_two_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="0dp"/>

		</android.support.constraint.ConstraintLayout>

	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/gallery_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/activity_profile_vcactivity_gallery_constraint_layout_height"
		android:layout_marginBottom="@dimen/activity_profile_vcactivity_gallery_constraint_layout_margin_bottom"
		android:layout_marginLeft="@dimen/activity_profile_vcactivity_gallery_constraint_layout_margin_start"
		android:layout_marginRight="@dimen/activity_profile_vcactivity_gallery_constraint_layout_margin_end"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="2dp"
		tools:layout_editor_absoluteY="445dp">

		<TextView
			android:id="@+id/latest_photos_text_view"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/activity_profile_vcactivity_latest_photos_text_view_margin_bottom"
			android:layout_marginTop="@dimen/activity_profile_vcactivity_latest_photos_text_view_margin_top"
			android:alpha="0.400000005960464"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="left"
			android:text="@string/activity_profile_vcactivity_latest_photos_text_view_text"
			android:textColor="@color/activity_profile_vcactivity_latest_photos_text_view_text_color"
			android:textSize="@dimen/activity_profile_vcactivity_latest_photos_text_view_text_size"
			app:layout_constraintBottom_toTopOf="@+id/photos_recycler_view"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="140dp"
			tools:layout_editor_absoluteY="4dp"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/photos_recycler_view"
			android:layout_width="0dp"
			android:layout_height="@dimen/activity_profile_vcactivity_photos_recycler_view_height"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="32dp"
			tools:listitem="@layout/kvtnuq_fs_fw_cell"/>

	</android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
