<?xml version="1.0" encoding="utf-8" standalone="no"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/activity_welcome_vcactivity_welcome_constraint_layout_background">

	<TextView
		android:id="@+id/spacebook_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_welcome_vcactivity_spacebook_text_view_margin_top"
		android:fontFamily="@font/font_lato_bold"
		android:gravity="center"
		android:text="@string/activity_welcome_vcactivity_spacebook_text_view_text"
		android:textColor="@color/activity_welcome_vcactivity_spacebook_text_view_text_color"
		android:textSize="@dimen/activity_welcome_vcactivity_spacebook_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
		tools:layout_editor_absoluteX="89dp"
		tools:layout_editor_absoluteY="270dp"/>

	<TextView
		android:id="@+id/conquer_the_stars_text_view"
		android:layout_width="@dimen/activity_welcome_vcactivity_conquer_the_stars_text_view_width"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/activity_welcome_vcactivity_conquer_the_stars_text_view_margin_top"
		android:fontFamily="@font/font_lato_regular"
		android:gravity="center"
		android:text="@string/activity_welcome_vcactivity_conquer_the_stars_text_view_text"
		android:textColor="@color/activity_welcome_vcactivity_conquer_the_stars_text_view_text_color"
		android:textSize="@dimen/activity_welcome_vcactivity_conquer_the_stars_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/spacebook_text_view"
		tools:layout_editor_absoluteX="92dp"
		tools:layout_editor_absoluteY="345dp"/>

	<ImageView
		android:id="@+id/logo_image_view"
		android:layout_width="@dimen/activity_welcome_vcactivity_logo_image_view_width"
		android:layout_height="@dimen/activity_welcome_vcactivity_logo_image_view_height"
		android:layout_marginTop="@dimen/activity_welcome_vcactivity_logo_image_view_margin_top"
		android:scaleType="fitXY"
		android:src="@drawable/logo"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="128dp"
		tools:layout_editor_absoluteY="100dp"/>

	<LinearLayout
		android:id="@+id/log_in_button"
		android:layout_width="@dimen/activity_welcome_vcactivity_log_in_button_width"
		android:layout_height="@dimen/activity_welcome_vcactivity_log_in_button_height"
		android:layout_marginBottom="@dimen/activity_welcome_vcactivity_log_in_button_margin_bottom"
		android:layout_marginRight="@dimen/activity_welcome_vcactivity_log_in_button_margin_end"
		android:background="@drawable/activity_welcome_vcactivity_log_in_button_selector"
		android:elevation="@dimen/elevation_default"
		android:gravity="center"
		android:orientation="horizontal"
		android:paddingBottom="@dimen/material_size_small"
		android:paddingTop="@dimen/material_size_small"
		app:layout_constraintBottom_toTopOf="@+id/supernova_stu_text_view"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="197dp"
		tools:layout_editor_absoluteY="484dp">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/material_size_small"
			android:layout_marginRight="@dimen/material_size_small"
			app:srcCompat="@drawable/icon_log_in"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/font_lato_bold"
			android:gravity="center"
			android:text="@string/activity_welcome_vcactivity_log_in_button_text"
			android:textColor="@color/activity_welcome_vcactivity_log_in_button_text_color"
			android:textSize="@dimen/activity_welcome_vcactivity_log_in_button_text_size"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/sign_up_button"
		android:layout_width="@dimen/activity_welcome_vcactivity_sign_up_button_width"
		android:layout_height="@dimen/activity_welcome_vcactivity_sign_up_button_height"
		android:layout_marginBottom="@dimen/activity_welcome_vcactivity_sign_up_button_margin_bottom"
		android:layout_marginLeft="@dimen/activity_welcome_vcactivity_sign_up_button_margin_start"
		android:background="@drawable/activity_welcome_vcactivity_sign_up_button_selector"
		android:elevation="@dimen/elevation_default"
		android:gravity="center"
		android:orientation="horizontal"
		android:paddingBottom="@dimen/material_size_small"
		android:paddingTop="@dimen/material_size_small"
		app:layout_constraintBottom_toTopOf="@+id/supernova_stu_text_view"
		app:layout_constraintLeft_toLeftOf="parent"
		tools:layout_editor_absoluteX="30dp"
		tools:layout_editor_absoluteY="484dp">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/material_size_small"
			android:layout_marginRight="@dimen/material_size_small"
			app:srcCompat="@drawable/icon_sign_up"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/font_lato_bold"
			android:gravity="center"
			android:text="@string/activity_welcome_vcactivity_sign_up_button_text"
			android:textColor="@color/activity_welcome_vcactivity_sign_up_button_text_color"
			android:textSize="@dimen/activity_welcome_vcactivity_sign_up_button_text_size"/>

	</LinearLayout>

	<TextView
		android:id="@+id/supernova_stu_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/activity_welcome_vcactivity_supernova_stu_text_view_margin_bottom"
		android:fontFamily="@font/font_lato_regular"
		android:gravity="center"
		android:text="@string/activity_welcome_vcactivity_supernova_stu_text_view_text"
		android:textColor="@color/activity_welcome_vcactivity_supernova_stu_text_view_text_color"
		android:textSize="@dimen/activity_welcome_vcactivity_supernova_stu_text_view_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="103dp"
		tools:layout_editor_absoluteY="625dp"/>

</android.support.constraint.ConstraintLayout>
